# opencl-intercept-layer

./: .appveyor.yml  .gitignore  .travis.yml  Android.mk  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  appveyor.yml
.github/workflows/: build.yml  codeql.yml  release.yml
CL/: cl.h  cl_gl.h  cl_platform.h
GL/: glcorearb.h
Kernels/: builtin_kernels.cl  precompiled_kernels.cl
OS/: OS.h  OS_linux.cpp  OS_linux.h  OS_linux_common.cpp  OS_linux_common.h  OS_mac.cpp  OS_mac.h  OS_mac_common.cpp  OS_mac_common.h  OS_mac_interpose.h  OS_timer.h  OS_windows.cpp  OS_windows.h  OS_windows_common.cpp  OS_windows_common.h
Src/: clIntercept.def  clIntercept.map  cli_ext.h  cliprof_init.cpp  common.h  controls.h  dispatch.cpp  dispatch.h  enummap.cpp  enummap.h  git_version.cpp.in  git_version.rc.in  instrumentation.h  intercept.cpp  intercept.h  main.cpp  objtracker.cpp  objtracker.h  stubs.cpp
cliconfig/: CLIConfig.cpp  CLIConfig.h  CLIConfig.rc  CLIConfig_version.rc2  CMakeLists.txt  envVars.h  resource.h
cliloader/: CMakeLists.txt  cliloader.cpp  git_version.h.in  printcontrols.h  printmetrics.h
cliprof/: CMakeLists.txt  cliprof.cpp  git_version.h.in
cmake_modules/: package.cmake
config/: CLIConfig.h  CLIConfig.rc  CMakeLists.txt  envVars.h  resource.h
docs/: FAQ.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  aubcapture.md  build.md  capture_single_kernels.md  chrome_tracing.md  cliloader.md  cliprof.md  controls.md  injecting_buffers_images.md  injecting_programs.md  install.md  kernel_isa.md  kernel_isa_cpu.md  kernel_isa_gpu.md  mdapi.md  vtune_logging.md
intercept/: CMakeLists.txt
intercept/CL/: cl.h  cl_gl.h  cl_icd.h  cl_platform.h
intercept/Kernels/: precompiled_kernels.cl
intercept/OS/: OS.h  OS_linux.cpp  OS_linux.h  OS_linux_common.cpp  OS_linux_common.h  OS_mac.cpp  OS_mac.h  OS_mac_common.cpp  OS_mac_common.h  OS_mac_interpose.h  OS_timer.h  OS_windows.cpp  OS_windows.h  OS_windows_common.cpp  OS_windows_common.h
intercept/Src/: cliprof_init.cpp  enummap.h  git_version.rc.in  objtracker.cpp  stubs.cpp
intercept/kernels/: builtin_kernels.cl  precompiled_kernels.cl
intercept/mdapi/: DriverStorePath.h  MetricsDiscoveryHelper.cpp  MetricsDiscoveryHelper.h  intercept_mdapi.cpp  metrics_discovery_api.h
intercept/resource/: clIntercept.rc  clIntercept_resource.h
intercept/scripts/: run.py
intercept/src/: chrometracer.cpp  chrometracer.h  clIntercept.def  clIntercept.map  cli_ext.h  cliprof_init.cpp  cmdbufrecorder.h  cmdbuftracer.h  common.h  controls.h  demangle.h  dispatch.cpp  dispatch.h  emulate.cpp  emulate.h  emulate_cmdbuf.cpp  enummap.cpp  enummap.h  git_version.cpp.in  git_version.rc.in  instrumentation.h  intercept.cpp  intercept.h  main.cpp  objtracker.cpp  objtracker.h  stubs.cpp  utils.cpp  utils.h
mdapi/: MetricsDiscoveryHelper.cpp  MetricsDiscoveryHelper.h  intercept_mdapi.cpp  metrics_discovery_api.h
resource/: clIntercept_resource.h
scripts/: capture_and_validate.py  combine_chrome_traces.py  disassemble_all.py  disassemble_all_cpu.py  disassemble_all_gpu.py  disassemble_cpu.sh  generate_controls_doc.py  parse_output_to_xlsx.py  rsl_run.py  run.py
